# SLAU

./: CMakeLists.txt  README.md  TridiagonalMatrix.cpp  TridiagonalMatrix.hpp  TridiagonalMatrixSolver.hpp  test_TridiagonalMatrixSolver.cpp  timer.cpp  timer_2.cpp  timer_2_1.cpp  timer_2_2.cpp  timer_3.cpp  timer_4.cpp
src/decompositions/: Householder.hpp
src/matrices/: CSR.hpp  DenseMatrix.hpp  EllipticGenerator.hpp  TridiagonalMatrix.cpp  TridiagonalMatrix.hpp  Vector.hpp
src/solvers/: CG.hpp  Chebyshev.hpp  Fastest_Grad.hpp  GMRES.hpp  GSeidel.hpp  GSeidel_plus.hpp  GaussQR.hpp  Jacobi.hpp  SOR.hpp  SimpleIterations.hpp  TridiagonalMatrixSolver.hpp
tests/: test_CG.cpp  test_CSR.cpp  test_Chebyshev.cpp  test_DenseMatrix.cpp  test_EllipticGenerator.cpp  test_Fastest_Grad.cpp  test_GMRES.cpp  test_GSeidel.cpp  test_GSeidel_plus.cpp  test_Jacobi.cpp  test_SOR.cpp  test_SimpleIterations.cpp  test_TridiagonalMatrixSolver.cpp
